--- a/campusjobs/src/main/AndroidManifest.xml
+++ b/campusjobs/src/main/AndroidManifest.xml
@@ -8,7 +8,22 @@
         <activity
             android:name=".activity.CampusActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
+
+        <activity
+            android:name=".activity.CareerTalkDetailsActivity"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activity.SJobFairDetailsActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activity.CampusSearchActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
 
     </application>
 
