设置默认模块

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity
             android:name=".activity.MainActivity"
             android:logo="@drawable/logo"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait">
 
         </activity>
