--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -150,11 +150,17 @@
         </activity>
         <activity
             android:name=".activity.personalcenter.ResumeOpenSettingActivity"
-            android:label="@string/title_activity_resume_open_setting" >
+            android:label="@string/title_activity_resume_open_setting"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".activity.personalcenter.AddOpenSettingActivity"
-            android:label="@string/title_activity_add_open_setting" >
+            android:label="@string/title_activity_add_open_setting"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".activity.WebViewActivity"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
