--- a/parttimejobs/src/main/AndroidManifest.xml
+++ b/parttimejobs/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         <activity
             android:name=".activity.PartTimeJobActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
 
         <activity
             android:name=".activity.PartJobDetailsActivity"
