--- a/applyjobs/src/main/AndroidManifest.xml
+++ b/applyjobs/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
             android:name=".activity.ApplyJobsActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustResize|stateHidden">
         </activity>
         <activity
