--- a/bluecollar/src/main/AndroidManifest.xml
+++ b/bluecollar/src/main/AndroidManifest.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cn.goodjobs.bluecollar" >
+<manifest package="cn.goodjobs.bluecollar"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name" >
+        android:label="@string/app_name">
         <activity
             android:name=".activity.BlueCollarActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask">
+        </activity>
+        <activity
+            android:name=".activity.BlueSearchActivity"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
