--- a/bluecollar/src/main/AndroidManifest.xml
+++ b/bluecollar/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
             android:name=".activity.BlueSearchActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity
+            android:name=".activity.BlueJobSearchResultActivity"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
