--- a/bluecollar/src/main/AndroidManifest.xml
+++ b/bluecollar/src/main/AndroidManifest.xml
@@ -8,7 +8,11 @@
         <activity
             android:name=".activity.BlueCollarActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTask">
+            android:launchMode="singleTask" >
+        </activity>
+        <activity
+            android:name=".activity.AddTrendActivity"
+            android:label="@string/title_activity_add_trend" >
         </activity>
     </application>
 
