--- a/bluecollar/src/main/AndroidManifest.xml
+++ b/bluecollar/src/main/AndroidManifest.xml
@@ -11,22 +11,22 @@
             android:launchMode="singleTask"></activity>
 
         <activity
-            android:name=".activity.ItemSettingActivity"
+            android:name=".activity.InfoCenter.ItemSettingActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"></activity>
 
         <activity
-            android:name=".activity.ItemMoreActivity"
+            android:name=".activity.InfoCenter.ItemMoreActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"></activity>
 
         <activity
-            android:name=".activity.ItemResumeActivity"
+            android:name=".activity.InfoCenter.ItemResumeActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"></activity>
 
         <activity
-            android:name=".activity.ResumeMoreActivity"
+            android:name=".activity.InfoCenter.ResumeMoreActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"></activity>
 
