--- a/bluecollar/src/main/AndroidManifest.xml
+++ b/bluecollar/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cn.goodjobs.bluecollar">
+    package="cn.goodjobs.bluecollar" >
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name">
+        android:label="@string/app_name" >
         <activity
             android:name=".activity.BlueCollarActivity"
             android:label="@string/app_name"
@@ -14,33 +14,32 @@
             android:name=".activity.makefriend.AddTrendActivity"
             android:label="@string/title_activity_add_trend" >
         </activity>
-
         <activity
             android:name=".activity.InfoCenter.ItemSettingActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTask"></activity>
-
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.InfoCenter.ItemMoreActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTask"></activity>
-
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.InfoCenter.ItemResumeActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTask"></activity>
-
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.InfoCenter.ResumeMoreActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTask"></activity>
-
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.BlueSearchActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.BlueJobSearchResultActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.makefriend.MakeFriendPersonalInfoActivity"
+            android:label="@string/title_activity_make_friend_personal_info" >
+        </activity>
     </application>
 
 </manifest>
