--- a/bluecollar/src/main/AndroidManifest.xml
+++ b/bluecollar/src/main/AndroidManifest.xml
@@ -45,11 +45,31 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.makefriend.MakeFriendPersonalInfoActivity"
-            android:label="@string/title_activity_make_friend_personal_info" />
+            android:label="@string/title_activity_make_friend_personal_info"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.makefriend.TrendDetailActivity"
             android:label="@string/title_activity_trend_detail"
-            android:windowSoftInputMode="adjustResize|stateHidden">
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateHidden" >
+        </activity>
+        <activity
+            android:name=".activity.makefriend.PersonalInfoActivity"
+            android:label="@string/title_activity_personal_info"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".activity.makefriend.OtherPersonalInfoActivity"
+            android:label="@string/title_activity_personal_info"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".activity.makefriend.LookActivity"
+            android:label="@string/title_activity_look" >
+        </activity>
+        <activity
+            android:name=".activity.makefriend.FansActivity"
+            android:label="@string/title_activity_fans" >
         </activity>
     </application>
 
