--- a/bluecollar/src/main/AndroidManifest.xml
+++ b/bluecollar/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    package="cn.goodjobs.bluecollar"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="cn.goodjobs.bluecollar">
 
     <application
         android:allowBackup="true"
@@ -9,38 +8,38 @@
         <activity
             android:name=".activity.BlueCollarActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.makefriend.AddTrendActivity"
-            android:label="@string/title_activity_add_trend"/>
+            android:label="@string/title_activity_add_trend" />
         <activity
             android:name=".activity.InfoCenter.ItemSettingActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.InfoCenter.ItemMoreActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.InfoCenter.ItemResumeActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.InfoCenter.ResumeMoreActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.BlueSearchActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.BlueJobSearchResultActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.InfoCenter.ItemCheckActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.InfoCenter.ItemApplyActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.InfoCenter.ItemCollectActivity"
             android:screenOrientation="portrait"></activity>
@@ -63,28 +62,27 @@
             android:name=".activity.makefriend.TrendDetailActivity"
             android:label="@string/title_activity_trend_detail"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize|stateHidden" >
-        </activity>
+            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
         <activity
             android:name=".activity.makefriend.PersonalInfoActivity"
             android:label="@string/title_activity_personal_info"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.makefriend.OtherPersonalInfoActivity"
             android:label="@string/title_activity_personal_info"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.makefriend.LookActivity"
             android:label="@string/title_activity_look"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.makefriend.FansActivity"
             android:label="@string/title_activity_fans"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activity.InfoCenter.ItemInviteActivity"
+            android:label="@string/title_activity_fans"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
