--- a/bluecollar/src/main/AndroidManifest.xml
+++ b/bluecollar/src/main/AndroidManifest.xml
@@ -1,60 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    package="cn.goodjobs.bluecollar"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="cn.goodjobs.bluecollar" >
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name">
+        android:label="@string/app_name" >
         <activity
             android:name=".activity.BlueCollarActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.makefriend.AddTrendActivity"
-            android:label="@string/title_activity_add_trend"/>
+            android:label="@string/title_activity_add_trend" />
         <activity
             android:name=".activity.InfoCenter.ItemSettingActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.InfoCenter.ItemMoreActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.InfoCenter.ItemResumeActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.InfoCenter.ResumeMoreActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.BlueSearchActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.BlueJobSearchResultActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.InfoCenter.ItemCheckActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.InfoCenter.ItemApplyActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.InfoCenter.ItemCollectActivity"
-            android:screenOrientation="portrait"></activity>
-
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.BlueJobDetailActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.BlueComplainActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.BlueJobCompanyDetailActivity"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.makefriend.MakeFriendPersonalInfoActivity"
             android:label="@string/title_activity_make_friend_personal_info"
@@ -78,12 +76,23 @@
         <activity
             android:name=".activity.makefriend.LookActivity"
             android:label="@string/title_activity_look"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".activity.makefriend.FansActivity"
             android:label="@string/title_activity_fans"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".activity.makefriend.MsgListActivity"
+            android:label="@string/title_activity_msg_list"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".activity.makefriend.MsgDetailActivity"
+            android:label="@string/title_activity_msg_detail"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateHidden">
         </activity>
     </application>
 
