--- a/common/build.gradle
+++ b/common/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     compile 'com.facebook.fresco:fresco:0.6.0+'
     compile project(':ptr-lib')
     compile files('libs/androideventbus-1.0.5.jar')
+    // 友盟统计
+    compile 'com.umeng.analytics:analytics:latest.integration'
+    compile files('libs/umeng-update-v2.6.0.1.jar')
 }
