--- a/bluecollar/src/main/AndroidManifest.xml
+++ b/bluecollar/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cn.goodjobs.bluecollar" >
+    package="cn.goodjobs.bluecollar">
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name" >
+        android:label="@string/app_name">
         <activity
             android:name=".activity.BlueCollarActivity"
             android:label="@string/app_name"
@@ -14,12 +14,10 @@
             android:label="@string/title_activity_add_trend" />
         <activity
             android:name=".activity.InfoCenter.ItemResumeActivity"
-            android:label="@string/app_name"
-            android:launchMode="singleTask" />
+            android:label="@string/app_name" />
         <activity
             android:name=".activity.InfoCenter.ResumeMoreActivity"
-            android:label="@string/app_name"
-            android:launchMode="singleTask" />
+            android:label="@string/app_name" />
         <activity
             android:name=".activity.BlueSearchActivity"
             android:screenOrientation="portrait" />
@@ -71,24 +69,20 @@
         <activity
             android:name=".activity.makefriend.LookActivity"
             android:label="@string/title_activity_look"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.makefriend.FansActivity"
             android:label="@string/title_activity_fans"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.makefriend.MsgListActivity"
             android:label="@string/title_activity_msg_list"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.makefriend.MsgDetailActivity"
             android:label="@string/title_activity_msg_detail"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize|stateHidden">
-        </activity>
+            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
         <activity
             android:name=".activity.InfoCenter.ItemInviteActivity"
             android:label="@string/title_activity_fans"
