--- a/common/build.gradle
+++ b/common/build.gradle
@@ -27,8 +27,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.1.0'
-    // http://www.fresco-cn.org/
-    compile 'com.facebook.fresco:fresco:0.6.0+'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile('cn.trinea.android.view.autoscrollviewpager:android-auto-scroll-view-pager:1.1.2') {
         exclude module: 'support-v4'
@@ -36,7 +34,7 @@ dependencies {
     compile files('libs/BaiduLBS_Android.jar')
     compile 'com.android.support:recyclerview-v7:23.1.0'
     // http://www.fresco-cn.org/
-    compile 'com.facebook.fresco:fresco:0.6.0+'
+    compile 'com.facebook.fresco:fresco:0.9.0'
     compile project(':ptr-lib')
     compile files('libs/androideventbus-1.0.5.jar')
     // 友盟统计
