--- a/common/build.gradle
+++ b/common/build.gradle
@@ -31,7 +31,6 @@ dependencies {
     compile('cn.trinea.android.view.autoscrollviewpager:android-auto-scroll-view-pager:1.1.2') {
         exclude module: 'support-v4'
     }
-    compile files('libs/BaiduLBS_Android.jar')
     compile 'com.android.support:recyclerview-v7:23.1.0'
     // http://www.fresco-cn.org/
     compile 'com.facebook.fresco:fresco:0.9.0'
@@ -42,4 +41,6 @@ dependencies {
     compile files('libs/umeng-update-v2.6.0.1.jar')
     compile files('libs/SocialSDK_QQZone_1.jar')
     compile files('libs/SocialSDK_QQZone_2.jar')
+    compile files('libs/AMap_2DMap_V2.8.0_20151231.jar')
+    compile files('libs/BaiduLBS_Android.jar')
 }
