--- a/bluecollar/src/main/AndroidManifest.xml
+++ b/bluecollar/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
         <activity
             android:name=".activity.makefriend.MakeFriendPersonalInfoActivity"
             android:label="@string/title_activity_make_friend_personal_info"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateHidden"/>
         <activity
             android:name=".activity.makefriend.TrendDetailActivity"
             android:label="@string/title_activity_trend_detail"
