--- a/common/build.gradle
+++ b/common/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     compile files('libs/SocialSDK_QQZone_2.jar')
     compile files('libs/AMap_2DMap_V2.8.0_20151231.jar')
     compile files('libs/BaiduLBS_Android.jar')
+    compile project(':PushSDK')
 }
