--- a/headhuntingjob/src/main/AndroidManifest.xml
+++ b/headhuntingjob/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         <activity
             android:name=".activity.HeadHuntingActivity"
             android:label="@string/app_name"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait"></activity>
 
 
