--- a/parttimejobs/src/main/AndroidManifest.xml
+++ b/parttimejobs/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
             android:name=".activity.PartTimeJobActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustResize|stateHidden"></activity>
 
         <activity
