--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -56,7 +56,7 @@
             android:value="513da0a95270157f04000055"></meta-data>
         <meta-data
             android:name="UMENG_CHANNEL"
-            android:value="goodjobs" />
+            android:value="goodjobs_qq" />
         <meta-data
             android:name="UMENG_MESSAGE_SECRET"
             android:value="63af2af18c4f9288927316b0dfd84df2"></meta-data>
